force-app/main/default/objects/CFS_Item__c/CFS_Item__c.object-meta.xml
<CustomObject>
    <label>Item</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>