force-app/main/default/objects/CFS_Item__c/fields/Book_Publication__c.field-meta.xml
<CustomField>
    <fullName>Book_Publication__c</fullName>
    <label>Book Publication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>