force-app/main/default/objects/CFS_Item__c/fields/CFS_Inventory_Count__c.field-meta.xml
<CustomField>
    <fullName>CFS_Inventory_Count__c</fullName>
    <label>Total Inventory Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>