force-app/main/default/objects/CFS_Item__c/fields/CFS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>CFS_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active ?</label>
    <type>Checkbox</type>
</CustomField>