force-app/main/default/objects/CFS_Item__c/fields/CFS_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>CFS_Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>