force-app/main/default/objects/CFS_Item__c/fields/Discount_Category__c.field-meta.xml
<CustomField>
    <fullName>Discount_Category__c</fullName>
    <label>Discount Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>