force-app/main/default/objects/CFS_Item__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <summarizedField>CMS_Customer_Item__c.Borrowed_Price__c</summarizedField>
    <summaryForeignKey>CMS_Customer_Item__c.CSF_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>