force-app/main/default/objects/CFS_Item__c/fields/Units_Available__c.field-meta.xml
<CustomField>
    <fullName>Units_Available__c</fullName>
    <formula>CFS_Inventory_Count__c -  Currently_Borrowed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>