force-app/main/default/objects/CFS_Item__c/fields/Video_Director__c.field-meta.xml
<CustomField>
    <fullName>Video_Director__c</fullName>
    <label>Video Director</label>
    <length>100</length>
    <type>Text</type>
</CustomField>