force-app/main/default/objects/CFS_Item__c/fields/Video_Name__c.field-meta.xml
<CustomField>
    <fullName>Video_Name__c</fullName>
    <label>Video Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>