force-app/main/default/objects/CFS_Item__c/fields/Video_Publication__c.field-meta.xml
<CustomField>
    <fullName>Video_Publication__c</fullName>
    <label>Video Publication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>