force-app/main/default/objects/CFS_Item__c/recordTypes/CFS_AVEquipment.recordType-meta.xml
<RecordType>
    <fullName>CFS_AVEquipment</fullName>
    <active>true</active>
    <description>This type of record holds information on items present in the library which are sold as CD/DVDs.</description>
    <label>AV Equipment</label>
</RecordType>