force-app/main/default/objects/CFS_Item__c/recordTypes/CFS_Book.recordType-meta.xml
<RecordType>
    <fullName>CFS_Book</fullName>
    <active>true</active>
    <description>This type of record holds information on items present in the library which are sold as books.</description>
    <label>Book</label>
</RecordType>