force-app/main/default/objects/CFS_Item__c/listViews/AV.listView-meta.xml
<ListView>
    <fullName>AV</fullName>
    <columns>NAME</columns>
    <columns>Video_Name__c</columns>
    <columns>Video_Director__c</columns>
    <columns>Video_Publication__c</columns>
    <columns>CFS_Category__c</columns>
    <columns>Currently_Borrowed__c</columns>
    <columns>Units_Available__c</columns>
    <columns>CFS_Purchase_Price__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CFS_Item__c.CFS_AVEquipment</value>
    </filters>
    <label>AV</label>
</ListView>