force-app/main/default/objects/CFS_Item__c/listViews/Books.listView-meta.xml
<ListView>
    <fullName>Books</fullName>
    <columns>NAME</columns>
    <columns>Book_Author__c</columns>
    <columns>Book_name__c</columns>
    <columns>Book_Publication__c</columns>
    <columns>CFS_Category__c</columns>
    <columns>Currently_Borrowed__c</columns>
    <columns>Units_Available__c</columns>
    <columns>CFS_Purchase_Price__c</columns>
    <columns>Language__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CFS_Item__c.CFS_Book</value>
    </filters>
    <label>Books</label>
</ListView>